fix for auto zoom on input field on iOS

--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,8 @@ body {
   padding: 5px;
   line-height: 20px;
   width: 100%;
+  font-size: 16px;
+  -webkit-text-size-adjust: 100%;
 }
 
 .newtaskinput::placeholder {
